testsuite/poke.pkl/mul-f64-diag-1.pk
/* { dg-do compile } */

var res
  = 3H .* 1L; /* { dg-error "invalid operand .*" } */
